Revert "GUI - stop the text from being too big on RP"
This reverts commit 512ba17f58116b96f7a45c906986e01f9c42f3d1.

--- a/app/gui/qt/theme/dark/doc-styles.css
+++ b/app/gui/qt/theme/dark/doc-styles.css
@@ -5,10 +5,6 @@ body {
   background-color: black;
 }
 
-ul {
-    font-size:  medium;
-}
-
 ul.toc {
   list-style-type: none;
 }
@@ -17,11 +13,6 @@ a {
     color: #FBDE2D;
     text-decoration: none;
 }
-
-p {
-    font-size:  medium;
-}
-
 
 em {
   color: darkorange;
@@ -113,7 +104,7 @@ code .info {
 }
 
 h1 {
-  font-size: larger;
+  font-size: xx-large;
   font-weight: bold;
   padding: 2px;
   color: white;
@@ -121,7 +112,7 @@ h1 {
 }
 
 h2 {
-  font-size: large;
+  font-size: x-large;
   font-weight: bold;
   padding: 2px;
   color: white;
